fix: format font-mono variable for better readability

--- a/src/main.css
+++ b/src/main.css
@@ -53,8 +53,9 @@
 	   Typography
 	   ============================ */
 	--font-sans: 'Inter Variable', Inter, ui-sans-serif, system-ui, -apple-system;
-	--font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
-		'Liberation Mono', 'Courier New', monospace;
+	--font-mono:
+		ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono',
+		'Courier New', monospace;
 
 	--font-weight-normal: 400;
 	--font-weight-medium: 500;
@@ -152,4 +153,3 @@
 body {
 	font-family: var(--font-sans);
 }
-
